--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -22,8 +22,8 @@
     </nav>
   </header>
 
-  <main id="main">
-    <section aria-labelledby="intro-heading" class="hero">
+  <main>
+    <section>
       <h2 id="intro-heading">Welcome to TechCon 2024</h2>
       <p>
         TechCon 2024 brings together developers, designers, and product leaders
